factorial-cache/factorial-cache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorial-ingress
  namespace: factorial
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /factorial
            backend:
              service:
                name: factorial-cache-service
                port:
                  number: 8080
